[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Inventory/InventoryWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://GUI/DragPreview.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/Inventory/Quickbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Crafting/CraftingGUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/InfoGUI/InfoGUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/DeconstructProgressBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Shared/Theme/builder_theme.tres" type="Theme" id=9]

[node name="GUI" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource( 9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="CraftingGUI" parent="HBoxContainer" instance=ExtResource( 6 )]
visible = false
size_flags_horizontal = 3

[node name="InventoryWindow" parent="HBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_right = 235.0
margin_bottom = 178.0
size_flags_horizontal = 3

[node name="DragPreview" parent="." instance=ExtResource( 3 )]
margin_left = 910.0
margin_top = 490.0
margin_right = 1010.0
margin_bottom = 590.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 950.0
margin_top = 80.0
margin_right = 970.0
margin_bottom = 1000.0
mouse_filter = 2
custom_constants/margin_top = 900

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_top = 900.0
margin_right = 20.0
margin_bottom = 920.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Quickbar" parent="MarginContainer/MarginContainer" instance=ExtResource( 4 )]
modulate = Color( 0.823529, 0.823529, 0.823529, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 10.0

[node name="InfoGUI" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="DeconstructProgressBar" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="inventory_changed" from="HBoxContainer/InventoryWindow" to="." method="_on_inventory_changed"]
[connection signal="inventory_changed" from="MarginContainer/MarginContainer/Quickbar" to="." method="_on_inventory_changed"]
